--- a/xuexi/config/custom.ini
+++ b/xuexi/config/custom.ini
@@ -1,26 +1,14 @@
 ; APPIUM配置
-; [APPIUM]
-; DRIVER_SERVER = http://localhost:4723/wd/hub
-; PLAT_FORM_NAME = Android
-; PLAT_FORM_VERSION = 9
-; DEVICE_NAME = EML_AL00
-; APP_PACKAGE = cn.xuexi.android
-; APP_ACTIVITY = com.alibaba.android.rimet.biz.SplashActivity
-; UNICODE_KEYBOARD = true
-; RESET_KEYBOARD = true
-; NO_RESET = true
-
-; 数据库配置
-[DATABASE]
-DATABASE_URI = sqlite:///./xuexi/data-dev.sqlite
+[appium_server]
+driver_server = http://localhost:4723/wd/hub
+wait_seconds = 15
+platform_name = Android
+platform_version = 5.1.1
+device_name = 127.0.0.1:62001
+app_package = cn.xuexi.android
+app_activity = com.alibaba.android.rimet.biz.SplashActivity
+unicode_keyboard = true
+reset_keyboard = true
+no_reset = true
 
 
-; 行为偏好配置
-[PREFER]
-; 挑战答题题数
-COUNT_CHALLENGE = 50
-; 挑战答题伪装思考时间0~5即可
-DELAY_CHALLENGE = 1
-
-; xpath规则
-[XPATH]
