--- a/xuexi/config/default.ini
+++ b/xuexi/config/default.ini
@@ -1,31 +1,71 @@
 ; APPIUM配置
-[APPIUM]
-DRIVER_SERVER = http://localhost:4723/wd/hub
-PLAT_FORM_NAME = Android,
-PLAT_FORM_VERSION = 6.0.1,
-DEVICE_NAME = 127.0.0.1:7555,
-APP_PACKAGE = cn.xuexi.android,
-APP_ACTIVITY = com.alibaba.android.rimet.biz.SplashActivity,
-UNICODE_KEYBOARD = true,
-RESET_KEYBOARD = true,
-NO_RESET = true
+[appium_server]
+driver_server = http://localhost:4723/wd/hub
+wait_seconds = 10
+platform_name = Android
+platform_version = 6.0.1
+device_name = 127.0.0.1:7555
+automation_name = uiautomator2
+app_package = cn.xuexi.android
+app_activity = com.alibaba.android.rimet.biz.SplashActivity
+unicode_keyboard = true
+reset_keyboard = true
+no_reset = true
 
 ; 数据库配置
-[DATABASE]
-DATABASE_URI = sqlite:///./xuexi/data-dev.sqlite
+[database_server]
+uri = sqlite:///./xuexi/sources/data-dev.sqlite
+export = ./xuexi/sources
 
 ; 日志配置
-[LOG]
-LOG_NAME = xuexi
-LOG_DIR = ./xuexi/logs
-LOG_LEVEL = DEBUG
+[log_server]
+name = xuexi
+uri = ./xuexi/logs
+log_level = DEBUG
+console_level = DEBUG
 
 ; 行为偏好配置
-[PREFER]
+[prefer]
 ; 挑战答题题数
-COUNT_CHALLENGE = 30
+count_challenge = 30
 ; 挑战答题伪装思考时间0~5即可
-DELAY_CHALLENGE = 1
+delay_challenge = 1
 
 ; xpath规则
-[XPATH]
+[rules]
+; 导航栏
+message = //*[@resource-id="cn.xuexi.android:id/home_bottom_tab_button_message"]
+ding = //*[@resource-id="cn.xuexi.android:id/home_bottom_tab_button_ding"]
+work = //*[@resource-id="cn.xuexi.android:id/home_bottom_tab_button_work"]
+contact = //*[@resource-id="cn.xuexi.android:id/home_bottom_tab_button_contact"]
+mine = //*[@resource-id="cn.xuexi.android:id/home_bottom_tab_button_mine"]
+
+; 我的页面
+quiz = //android.view.View[@content-desc="我要答题" or @text="我要答题"]
+points = //android.view.View[@content-desc="学习积分" or @text="学习积分"]
+
+; 我要答题页面
+daily = //android.view.View[@content-desc="每日答题" or @text="每日答题"]
+weekly = //android.view.View[@content-desc="每周答题" or @text="每周答题"]
+monthly = //android.view.View[@content-desc="专项答题" or @text="专项答题"]
+challenge = //android.view.View[@content-desc="挑战答题" or @text="挑战答题"]
+
+; 每日答题页面
+category = //android.view.View[@content-desc="单选题" or @content-desc="多选题" or @content-desc="填空题" or @text="单选题" or @text="多选题" or @text="填空题"]
+content_radio_check = //android.widget.ListView/preceding-sibling::android.view.View[1]
+content_blank = //android.widget.EditText/../android.view.View
+edit_text = //android.widget.EditText
+
+options_radio_check = //android.widget.ListView/android.view.View/android.view.View/android.view.View[last()]
+submit = //android.widget.Button
+correct = //android.view.View[@content-desc="答案解析"]/following-sibling::android.view.View[1]
+description = //android.view.View[@content-desc="答案解析"]/following-sibling::android.view.View[2]
+score_reached = //android.view.View[@content-desc="领取奖励已达今日上限"]
+return = //android.widget.Button[@content-desc="返回"]
+next = 	//android.widget.Button[@content-desc="再来一组"]
+
+; 挑战答题页面
+content_challenge = //android.widget.ListView/preceding-sibling::android.view.View[1]
+
+options_challenge = //android.widget.ListView/android.view.View
+stop = //android.view.View[@content-desc="结束本局"]
