--- a/xuexi/config-default.ini
+++ b/xuexi/config-default.ini
@@ -40,6 +40,8 @@ article_count = 25
 article_delay = 30
 ; 收藏、分享、留言的文章篇数 积分设为2+， 该操作不积点点通
 star_share_comment = 2
+; 是否保留留言和收藏
+keep_star_comment = false
 ; ==============================================================================================================
 
 ; mumu模拟器
@@ -142,7 +144,8 @@ rule_share_bounds = //node[@text="欢迎发表你的观点"]/../node[4]/@bounds
 rule_comment_bounds = //node[@text="欢迎发表你的观点"]/@bounds
 rule_share2xuexi_bounds = //node[@text="分享到学习强国"]/@bounds
 rule_publish_bounds = //node[@text="发布"]/@bounds
-
+rule_delete_bounds = //node[@text="删除"]/@bounds
+rule_delete_confirm_bounds = //node[@text="确认"]/@bounds
 
 ; 夜神模拟器
 [nox]
