--- a/xuexi/config/default.ini
+++ b/xuexi/config/default.ini
@@ -5,7 +5,8 @@ wait_until_seconds = 10
 device_ready_timeout = 20
 platform_name = Android
 platform_version = 5.1.1
-device_name = 127.0.0.1:62001
+device_name = SM_G955F
+uuid = 127.0.0.1:62001
 automation_name = uiautomator2
 app_package = cn.xuexi.android
 app_activity = com.alibaba.android.rimet.biz.SplashActivity
@@ -13,31 +14,56 @@ unicode_keyboard = true
 reset_keyboard = true
 no_reset = true
 
+; 用户名、密码配置 针对需要重新登录用户的情况
+; 安全起见 default.ini 中不会写真实数据，请放在 custom.ini 中
+; 如账号已登录，此项不用配置
+[secret]
+username = it_is_a_secret
+password = it_is_a_secret
 
 ; 数据库配置
 [database_server]
 uri = sqlite:///./xuexi/sources/data-dev.sqlite
 export = ./xuexi/sources/exports
-staging = ./xuexi/source/data-dev.json
+staging = ./xuexi/source/comments.json
 
 ; 日志配置
 [log_server]
 name = xuexi
 uri = ./xuexi/logs
 log_level = DEBUG
-console_level = DEBUG
+console_level = INFO
 
 ; 行为偏好配置
 [prefer]
+; 每周检查每周答题和专项答题的日期
+quiz_weekday = 星期六
 ; 挑战答题题数
 count_challenge = 10
 ; 挑战答题伪装思考时间0~5即可
 delay_challenge = 1
 ; 每日答题组间延时
 delay_daily = 3
+; 明日复明日，答题永不停
+force_daily = 0
+
+; 视听学习篇数、观看秒数
+count_view = 20
+delay_view = 60
+
+; 新闻学习篇数、秒数
+count_read = 25
+delay_read = 30
+; 收藏、分享、留言
+count_star_share_comment = 3
 
 ; xpath规则
 [rules]
+; 登录页面
+btn_login = //android.widget.Button[@text="登录" or @content-desc="登录"]
+username_password = //android.widget.EditText
+agree_protocol = //android.view.View[@text="同意" or @content-desc="同意"]
+
 ; 导航栏
 message = //*[@resource-id="cn.xuexi.android:id/home_bottom_tab_button_message"]
 ding = //*[@resource-id="cn.xuexi.android:id/home_bottom_tab_button_ding"]
@@ -59,12 +85,13 @@ challenge = //android.view.View[@content-desc="挑战答题" or @text="挑战答
 
 ; 每日答题页面
 catagory = //android.view.View[@content-desc="单选题" or @content-desc="多选题" or @content-desc="填空题" or @text="单选题" or @text="多选题" or @text="填空题"]
-content_radio_check = //android.widget.ListView/preceding-sibling::android.view.View[1]
+content_radio_check = //android.widget.ListView/../android.view.View[2]
 content_blank = //android.widget.EditText/../../android.view.View
 edit_text = //android.widget.EditText
+ecah_edit_length = //android.widget.EditText/..
 options_radio = //android.widget.RadioButton[@class="android.widget.RadioButton"]/../android.view.View[last()]
 options_check = //android.widget.CheckBox[@class="android.widget.CheckBox"]/../android.view.View[last()]
-submit = //android.widget.Button
+submit = //android.widget.Button[@text="确定" or @text="下一题" or @text="完成" or @content-desc="确定" or @content-desc="下一题" or @content-desc="完成"]
 correct = //android.view.View[starts-with(@text,'正确答案：') or starts-with(@content-desc,'正确答案：')]
 note = //android.view.View[starts-with(@text,'正确答案：') or starts-with(@content-desc,'正确答案：')]/following-sibling::android.view.View[1]
 score_reached = //android.view.View[@content-desc="领取奖励已达今日上限" or @text="领取奖励已达今日上限"]
