--- a/xuexi/config/default.ini
+++ b/xuexi/config/default.ini
@@ -37,21 +37,21 @@ console_level = INFO
 ; 行为偏好配置
 [prefer]
 ; 每周检查每周答题和专项答题的日期
-quiz_weekday = 星期六
+quiz_weekday = Saturday
 ; 挑战答题题数
 count_challenge = 10
 ; 挑战答题伪装思考时间0~5即可
 delay_challenge = 1
 ; 每日答题组间延时
 delay_daily = 3
-; 明日复明日，答题永不停
-force_daily = 0
 
-; 视听学习篇数、观看秒数
+; 视听学习百灵栏目、篇数、观看秒数
+column_of_video = 推荐
 count_view = 20
 delay_view = 60
 
-; 新闻学习篇数、秒数
+; 新闻学习栏目、篇数、秒数
+column_of_news = 推荐
 count_read = 25
 delay_read = 30
 ; 收藏、分享、留言
@@ -73,9 +73,11 @@ mine = //*[@resource-id="cn.xuexi.android:id/home_bottom_tab_button_mine"]
 
 ; 我的页面
 quiz_entry = //android.view.View[@content-desc="我要答题" or @text="我要答题"]
-score_entry = //android.view.View[@content-desc="学习积分" or @text="学习积分"]
-score_title = //android.view.View[starts-with(@text,'已获') or starts-with(@content-desc,'已获')]/preceding-sibling::android.view.View[2]
-score_nums = //android.view.View[starts-with(@text,'已获') or starts-with(@content-desc,'已获')]
+bonus_entry = //android.view.View[@content-desc="学习积分" or @text="学习积分"]
+
+; 积分页面
+bonus_titles = //android.view.View[starts-with(@text,'已获') or starts-with(@content-desc,'已获')]/preceding-sibling::android.view.View[2]
+bonus_nums = //android.view.View[starts-with(@text,'已获') or starts-with(@content-desc,'已获')]
 
 ; 我要答题页面
 daily = //android.view.View[@content-desc="每日答题" or @text="每日答题"]
@@ -94,12 +96,17 @@ options_check = //android.widget.CheckBox[@class="android.widget.CheckBox"]/../a
 submit = //android.widget.Button[@text="确定" or @text="下一题" or @text="完成" or @content-desc="确定" or @content-desc="下一题" or @content-desc="完成"]
 correct = //android.view.View[starts-with(@text,'正确答案：') or starts-with(@content-desc,'正确答案：')]
 note = //android.view.View[starts-with(@text,'正确答案：') or starts-with(@content-desc,'正确答案：')]/following-sibling::android.view.View[1]
+score = //android.view.View[starts-with(@text,'+') or starts-with(@content-desc,'+')]
 score_reached = //android.view.View[@content-desc="领取奖励已达今日上限" or @text="领取奖励已达今日上限"]
 return = //android.widget.Button[@content-desc="返回" or @text="返回"]
 next = 	//android.widget.Button[@content-desc="再来一组" or @text="再来一组"]
 
 ; 挑战答题页面         
 content_challenge = //android.widget.ListView/preceding-sibling::android.view.View[1]
-
 options_challenge = //android.widget.RadioButton/following-sibling::android.view.View[1]
 stop = //android.view.View[@content-desc="结束本局" or @text="结束本局"]
+
+; 文章学习页面
+column_name = //android.view.View/android.widget.LinearLayout/android.widget.TextView
+news_list = //android.widget.ListView/android.widget.FrameLayout
+news_title = //android.widget.TextView[@resource-id="cn.xuexi.android:id/general_card_title_id"]
