--- a/xuexi/config-default.ini
+++ b/xuexi/config-default.ini
@@ -80,6 +80,7 @@ rule_bottom_contact = //node[@resource-id="cn.xuexi.android:id/home_bottom_tab_b
 rule_bottom_mine = //node[@resource-id="cn.xuexi.android:id/home_bottom_tab_button_mine"]/@bounds
 ; 我要答题xpath规则
 ; 我要答题入口，[我要答题]按钮
+rule_bonus_entry = //node[@content-desc="学习积分"]/@bounds
 rule_quiz_entry = //node[@content-desc="我要答题"]/@bounds
 ; 我要答题出口：[<]左上角后退按钮 我要答题父节点的第一个子节点,答题记录的前一个兄弟节点
 rule_quiz_exit = //node[@content-desc="答题记录"]/preceding-sibling::node[1]/@bounds
@@ -88,6 +89,11 @@ rule_daily_entry = //node[@content-desc="每日答题"]/@bounds
 ; 挑战答题入口　[挑战答题]按钮
 rule_challenge_entry = //node[@content-desc="挑战答题"]/@bounds
 ; ---------------------------------------------------------------------------------------------------------------
+; 我的积分页面 Auto 2.0版本仅检查单项完成情况
+rule_bonus_title = //node[@class="android.widget.ListView"]/node/node[1]/@content-desc
+rule_bonus_score = //node[@class="android.widget.ListView"]/node/node[4]/@content-desc
+
+
 ; 每日答题xpath规则
 ; 题型：填空题、单选题、多选题
 rule_type = //node[@content-desc="1 /5" or @content-desc="2 /5" or @content-desc="3 /5" or @content-desc="4 /5" or @content-desc="5 /5"]/preceding-sibling::node[1]/@content-desc
