--- a/xuexi/config/default.ini
+++ b/xuexi/config/default.ini
@@ -46,6 +46,8 @@ delay_challenge = 1
 delay_daily = 3
 
 ; 视听学习百灵栏目、篇数、观看秒数
+channel_of_fm = 音乐之声
+volume_mute = true
 column_of_video = 推荐
 count_view = 20
 delay_view = 60
@@ -65,6 +67,7 @@ username_password = //android.widget.EditText
 agree_protocol = //android.view.View[@text="同意" or @content-desc="同意"]
 
 ; 导航栏
+; 强國通、百靈、學習、視聽學習、我的
 message = //*[@resource-id="cn.xuexi.android:id/home_bottom_tab_button_message"]
 ding = //*[@resource-id="cn.xuexi.android:id/home_bottom_tab_button_ding"]
 work = //*[@resource-id="cn.xuexi.android:id/home_bottom_tab_button_work"]
@@ -107,6 +110,10 @@ options_challenge = //android.widget.RadioButton/following-sibling::android.view
 stop = //android.view.View[@content-desc="结束本局" or @text="结束本局"]
 
 ; 文章学习页面
-column_name = //android.view.View/android.widget.LinearLayout/android.widget.TextView
+column_name = //android.widget.LinearLayout/android.widget.LinearLayout/android.view.View/android.widget.LinearLayout/android.widget.TextView
 news_list = //android.widget.ListView/android.widget.FrameLayout
 news_title = //android.widget.TextView[@resource-id="cn.xuexi.android:id/general_card_title_id"]
+
+; 视听学习页面 听广播
+audiovisual_entry = //android.widget.TextView[@text="听广播" or @content-desc="听广播"]
+fm_channel = //android.widget.TextView[@text="default_channel" or @content-desc="default_channel"]
