--- a/xuexi/config-default.ini
+++ b/xuexi/config-default.ini
@@ -1,6 +1,6 @@
 [common]
 ; 设备名称 指明连接的安卓设备, 需要同名[section]
-device = mumu
+device = nox
 ; 数据库URI
 ; 目前仅使用database_uri， 另两个是担心以后每日答题和挑战答题出现同一题造成bug，只要将三个配置成一样即可
 database_uri = sqlite:///./xuexi/data-dev.sqlite
@@ -178,6 +178,7 @@ rule_bottom_contact = //node[@resource-id="cn.xuexi.android:id/home_bottom_tab_b
 rule_bottom_mine = //node[@resource-id="cn.xuexi.android:id/home_bottom_tab_button_mine"]/@bounds
 ; 我要答题xpath规则
 ; 我要答题入口，[我要答题]按钮
+rule_bonus_entry = //node[@text="学习积分"]/@bounds
 rule_quiz_entry = //node[@text="我要答题"]/@bounds
 ; 我要答题出口：[<]左上角后退按钮 我要答题父节点的第一个子节点,答题记录的前一个兄弟节点
 rule_quiz_exit = //node[@text="答题记录"]/preceding-sibling::node[1]/@bounds
@@ -186,6 +187,9 @@ rule_daily_entry = //node[@text="每日答题"]/@bounds
 ; 挑战答题入口　[挑战答题]按钮
 rule_challenge_entry = //node[@text="挑战答题"]/@bounds
 ; ---------------------------------------------------------------------------------------------------------------
+; 我的积分页面 Auto 2.0版本仅检查单项完成情况
+rule_bonus_title = //node[@class="android.widget.ListView"]/node/node[1]/@text
+rule_bonus_score = //node[@class="android.widget.ListView"]/node/node[4]/@text
 ; 每日答题xpath规则
 ; 题型：填空题、单选题、多选题
 rule_type = //node[@text="1 /5" or @text="2 /5" or @text="3 /5" or @text="4 /5" or @text="5 /5"]/preceding-sibling::node[1]/@text
