AutoXue Appium版横空出世

--- a/study/config/default.ini
+++ b/study/config/default.ini
@@ -23,23 +23,24 @@ password = it_is_a_secret
 
 ; 数据库配置
 [database_server]
-uri = sqlite:///./xuexi/sources/data-dev.sqlite
-export = ./xuexi/sources/exports
-staging = ./xuexi/source/comments.json
+uri = sqlite:///./study/sources/data-dev.sqlite
+export = ./study/sources/exports
+staging = ./study/source/comments.json
 
 ; 日志配置
 [log_server]
-name = xuexi
-uri = ./xuexi/logs
+name = study
+uri = ./study/logs
 log_level = DEBUG
 console_level = INFO
 
 ; 行为偏好配置
 [prefer]
-; 每周检查每周答题和专项答题的日期
+; 点点通要求：新闻阅读20、视听学习20、挑战答题15
+; 每周检查每周答题和专项答题的日期，只是检查一下，暂不实现功能
 quiz_weekday = Saturday
-; 挑战答题题数
-count_challenge = 10
+; 挑战答题题数 10 或 15，建议15，多挑战5题不占用额外时间，在视听学习时间内完成
+count_challenge = 15
 ; 挑战答题伪装思考时间0~5即可
 delay_challenge = 1
 ; 每日答题组间延时
@@ -49,15 +50,18 @@ delay_daily = 3
 channel_of_fm = 音乐之声
 volume_mute = true
 column_of_video = 推荐
-count_view = 20
-delay_view = 60
+; 视听学习额外学习篇目 0 或 15，建议15，因为总时长要求
+count_view_ex = 15
+
 
 ; 新闻学习栏目、篇数、秒数
-column_of_news = 推荐
-count_read = 25
-delay_read = 30
+column_of_news = 订阅
+; 新闻学习额外学习篇目 0 或 15，建议15，因为总时长要求
+count_read_ex = 15
+
 ; 收藏、分享、留言
-count_star_share_comment = 3
+count_star_share_comment = 2
+keep_star_comments = false
 
 ; xpath规则
 [rules]
@@ -113,7 +117,20 @@ stop = //android.view.View[@content-desc="结束本局" or @text="结束本局"]
 column_name = //android.widget.LinearLayout/android.widget.LinearLayout/android.view.View/android.widget.LinearLayout/android.widget.TextView
 news_list = //android.widget.ListView/android.widget.FrameLayout
 news_title = //android.widget.TextView[@resource-id="cn.xuexi.android:id/general_card_title_id"]
+thumb_up = //android.view.View[@resource-id="like-wrapper"]
+edit_area = //android.widget.TextView[@text="欢迎发表你的观点" or @content-desc="欢迎发表你的观点"]
+edit_input = //android.widget.EditText[@text="好观点将会被优先展示"]
+btn_comments = //android.widget.TextView[@text="欢迎发表你的观点" or @content-desc="欢迎发表你的观点"]/following-sibling::android.widget.FrameLayout[1]
+btn_star = //android.widget.TextView[@text="欢迎发表你的观点" or @content-desc="欢迎发表你的观点"]/following-sibling::android.widget.ImageView[1]
+btn_share = //android.widget.TextView[@text="欢迎发表你的观点" or @content-desc="欢迎发表你的观点"]/following-sibling::android.widget.ImageView[2]
+btn_share2xuexi = //android.widget.TextView[@text="分享到学习强国" or @content-desc="分享到学习强国"]
+btn_comments_publish = //android.widget.TextView[@text="发布" or @content-desc="发布"]
+btn_comments_delete = //android.widget.TextView[@text="删除" or @content-desc="删除"]
+btn_comments_delete_confirm = //android.widget.Button[@resource-id="android:id/button1"]
 
 ; 视听学习页面 听广播
 audiovisual_entry = //android.widget.TextView[@text="听广播" or @content-desc="听广播"]
 fm_channel = //android.widget.TextView[@text="default_channel" or @content-desc="default_channel"]
+newscast_enter = //android.widget.TextView[@text="联播频道" or @content-desc="联播频道"]
+ding_channel = //android.widget.TextView[@text="default_channel" or @content-desc="default_channel"]
+first_video = //android.widget.ListView/android.widget.FrameLayout[1]//android.widget.ImageView
