--- a/xuexi/config-default.ini
+++ b/xuexi/config-default.ini
@@ -18,7 +18,7 @@ daily_forver = false
 ; 每日答题每组时间间隔 之前有发生过10秒内开始下一组不得分的情况，后来又没了，所以把这个时间间隔写活
 daily_delay = 10
 ; 挑战答题题数， 积分设为10+， 积点点通设为30+
-challenge_count = 35
+challenge_count = 15
 # 挑战答题时延， 设0-5， 0表示随机
 challenge_delay = 0
 
@@ -233,8 +233,8 @@ rule_again_bounds = //node[@text="再来一局"]/@bounds
 rule_first_video = //node[@class="android.widget.ListView"]/node[1]/@bounds
 
 ; 阅读文章xpath规则
-rule_columns_content = //node[@class="android.view.View"]/node[@class="android.widget.LinearLayout"]/node[@class="android.widget.TextView"]/@text
-rule_columns_bounds = //node[@class="android.view.View"]/node[@class="android.widget.LinearLayout"]/@bounds
+rule_columns_content = //node[@class="android.widget.LinearLayout"]/node[@class="android.view.View"]/node[@class="android.widget.LinearLayout"]/node[@class="android.widget.TextView"]/@text
+rule_columns_bounds = //node[@class="android.widget.LinearLayout"]/node[@class="android.view.View"]/node[@class="android.widget.LinearLayout"]/@bounds
 rule_fixed_top_bounds = ////node[@class="android.widget.ListView"]/node[1]/@bounds
 rule_fixed_bottom_bounds = ////node[@class="android.widget.ListView"]/node[last()]/@bounds
 rule_news_bounds = //node[@class="android.widget.ListView"]//node[@resource-id="cn.xuexi.android:id/general_card_title_id"]/@bounds
@@ -246,3 +246,5 @@ rule_share_bounds = //node[@text="欢迎发表你的观点"]/../node[4]/@bounds
 rule_comment_bounds = //node[@text="欢迎发表你的观点"]/@bounds
 rule_share2xuexi_bounds = //node[@text="分享到学习强国"]/@bounds
 rule_publish_bounds = //node[@text="发布"]/@bounds
+rule_delete_bounds = //node[@text="删除"]/@bounds
+rule_delete_confirm_bounds = //node[@text="确认"]/@bounds
